# autonomous-vehicle-simulation

./: CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  README.md  commitlint.config.js  package-lock.json  package.json
Impl/: autodrive.cpp  bizier.h  pid.hpp  prediction.h  utilTargetLane.h  utilTargetObstacle.h
Impl/util/: GetSignType.h  UtilDriver.h  UtilMath.h
Release/: autodive_test.txt  killAutoDrive.bat  logServer.txt  startAutoDrive.bat  test.txt
WinLibs/: HDMapAPI.pyd  HDMapModule.lib  PythonAPISample.py  SSD.lib  SimOneAPI.lib  SimOneIOStruct.py  SimOnePNCAPI.py  SimOneSensorAPI.py  SimOneServiceAPI.py  SimOneStreamingAPI.lib  SimOneStreamingAPI.py  SimOneV2XAPI.py  V2X_ASN_New4Span.lib  tsf.lib
include/: SimOneEvaluationAPI.h  SimOneHDMapAPI.h  SimOnePNCAPI.h  SimOneSensorAPI.h  SimOneServiceAPI.h  SimOneStreamingAPI.h  SimOneV2XAPI.h  tsf.h
include/Service/: SimOneIOStruct.h
include/public/: MHDMap.h
include/public/common/: MBridge.h  MEnum.h  MRoadTypeInfo.h  MSignal.h  MTunnel.h
include/v2xinclude/: Acceleration.h  AccelerationSet4Way.h  AllowedManeuvers.h  AntiLockBrakeStatus.h  AuxiliaryBrakeStatus.h  BasicSafetyMessage.h  BasicVehicleClass.h  BrakeAppliedStatus.h  BrakeBoostApplied.h  BrakePedalStatus.h  BrakeSystemStatus.h  BusInfo.h  BusStationInformation.h  BusStationNum.h  CoarseHeading.h  Confidence.h  ConnectingLane.h  Connection.h  ConnectsToList.h  DDateTime.h  DDay.h  DHour.h  DMinute.h  DMonth.h  DSecond.h  DTimeOffset.h  DYear.h  Description.h  DescriptiveName.h  DrivingIntention.h  Elevation.h  ElevationConfidence.h  EventSource.h  EventType.h  ExteriorLights.h  FuelType.h  FullPositionVector.h  GNSSstatus.h  Heading.h  HeadingConfidence.h  (+132 more)
